--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cron-custom",
-  "version": "1.0.6",
+  "version": "1.0.9",
   "description": "vue 的 cron 组件，支持解析/反解析 cron 表达式，生成最近五次的符合条件时间",
   "author": "ibule",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lib": "vue-cli-service build --target lib --name vueCronCustom --dest lib src/index.js",
-    "pub": "npm publish"
+    "pub": "npm run-script build && npm publish"
   },
   "dependencies": {
     "element-ui": "^2.4.11",
